--- a/Fuentes/CovidExamenes/app/src/main/res/values/colors.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#495464</color>
-    <color name="colorPrimaryDark">#bbbfca</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#e8e8e8</color>
+    <color name="colorRojo">#FF0000</color>
+    <color name="colorAzul">#42A5F5</color>
+    <color name="colorBlanco">#FFFFFF</color>
+    <color name="colorCeleste">#B3E5FC</color>
 </resources>
