Se genero el boton faltante para registar

--- a/Fuentes/CovidExamenes/app/src/main/res/layout/activity_cuarto.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/layout/activity_cuarto.xml
@@ -282,7 +282,7 @@
 
         <Button
             android:layout_marginTop="@dimen/magin_top_lv"
-            android:id="@+id/idbtn_agrgegar"
+            android:id="@+id/agregar_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/input"
